NDW-Marketplace/ntm-metadata-registry/ntm-backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntm-backend
  labels:
    app: ntm-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ntm-backend
  template:
    metadata:
      labels:
        app: ntm-backend
    spec:
      containers:
      - name: ntm-backend
        image: napcoredataspace.azurecr.io/ntm-backend:latest
        ports:
        - containerPort: 80
