NDW-Marketplace/ntm-metadata-registry/ntm-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntm-backend
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: ntm-backend
